--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
   </head>
-  <body>
+  <body  style="background-color: #bbb;">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
@@ -26,7 +26,7 @@
       id="canvas"
       width="512"
       height="512"
-      style="border: 1px solid #000000"
+      style="border: 1px solid #000000; background: #ffffff;"
     >
       Your browser does not support the HTML5 canvas tag.
     </canvas>
